# zoltraak_auto

./: .gitmodules  .pre-commit-config.yaml  .ruff.toml  .test_durations  ARCHITECTURE.md  Dockerfile  README.md  codetest.py  pyproject.toml  pytest.ini  ruff.toml  setup.py  update_version.py
.github/workflows/: ci.yml  docker-publish.yml  integration-tests.yml
assets/videos/: natural_langage_state_transition_mov.py
docs/: back_story.md  configuration.md
docs/designs/: MarkdownToPythonConverter.md  TargetCodeGenerator.md
samples/: destiny_def_InstantPromptBox.md
scripts/: clean_work.sh  demo_zoltraak.sh  run_tests.sh
scripts/python/: delete_gh_wokflow_logs.py  get_run_times.py
tests/: README.md  conftest.py  sample.md  test_cli.py  test_llms.py  test_minimal.py
tests/integration_tests/: test_api_keys.py  test_data_quality_evaluation.py  test_performance_first_run.py  test_performance_second_run.py
tests/unit_tests/: conftest.py  helper.py  test_converter.py  test_md_converter.py
tests/unit_tests/converter/: test_base_converter.py  test_converter.py  test_md_converter.py  test_sample.py
zoltraak/: __init__.py  cli.py  converter.py  gen_markdown.py  gencode.py  md_converter.py  md_generator.py  settings.py
zoltraak/analyzer/dependency_map/: ast_util.py  change_impact_analyzer.py  dependency_manager_base.py  dependency_types.py  dependency_visualizer.py  example.py  llm_context_generator.py
zoltraak/analyzer/dependency_map/python/: dependency_manager_py.py
zoltraak/converter/: base_converter.py  converter.py  md_converter.py
zoltraak/core/: eval.py  magic_workflow.py  prompt_manager.py
zoltraak/eval/: eval.py
zoltraak/generator/: file_analyzer.py  file_remover.py  gencode.py  gencodebase.py
zoltraak/grimoires/architect/: architect_claude.md  architect_daiagrams.md  architect_detail.md  architect_detail_dir.md  architect_develop.md
zoltraak/grimoires/compiler/: dev_code_python.md  dev_info_structure.md  dev_info_structure_final.md  dev_obj.md  dev_obj_file.md  dev_obj_final.md  dev_obj_modify.md  dev_request_python.md  general_md.md  general_prompt.md  ref_create_directory.py  structure_full.md
zoltraak/grimoires/developer/: dev_csharp.md  dev_markdown.md  dev_python.md
zoltraak/llms/: litellm_api.py
zoltraak/schema/: schema.py
zoltraak/utils/: diff_util.py  file_util.py  grimoires_util.py  gui_util.py  log_util.py  process_text.py  prompt_import.py  rich_console.py  subprocess_util.py
