[tool.poetry]
authors = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: GPL-3.0 license",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Software Development",
]
description = "zoltraak"
license = "GPL-3.0"
name = "zoltraak"

readme = "README.md"
repository = "https://github.com/nobu007/zoltraak_auto"
version = "0.1.33"

[tool.poetry.scripts]
zoltraak = "zoltraak.cli:main"

[tool.poetry.urls]
"Source Code" = "https://github.com/nobu007/zoltraak_auto"

[tool.poetry.dependencies]
anyio = "^4.6.2"
deepeval = "^1.5.3"
diagrams = "^0.23.4"
instant_prompt_box = {path = "InstantPromptBox"}
langfuse = "^2.53.9"
litellm = "^1.51.3"
networkx = "^3.4.2"
playwright = "^1.47.0"
pyautogui = "^0.9.54"
pydantic = "^2.9.2"
pygraphviz = "^1.14"
pyperclip = "^1.9.0"
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
rich = "^13.8.1"
tenacity = "^8.4.2" # avoid https://github.com/BerriAI/litellm/issues/5690

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-clarity = "^1.0.1"
pytest-randomly = "^3.15.0"
pytest-split = "^0.9.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.1.5"

[tool.poetry.group.mypy]
optional = false

[tool.poetry.group.mypy.dependencies]
mypy = "^1"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.9.0"]
